--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body class="hello">
   <header>
-    <h1>Cabecera</h1>
+    <h1>Nombre del negocio mas logo</h1>
   </header>
   
  <head>
