--- a/mision_vision.html
+++ b/mision_vision.html
@@ -31,7 +31,7 @@
 
     body {
       width: 100%;
-      background-color: whitesmoke;
+      background-color: white;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
@@ -125,36 +125,28 @@
       </nav>
     </div>
   </header>
-  
-  <section align="center">
-    <img src="imag/logo-transparent-png.png" alt="Lo siento" width="180" height="180">
+    <section align="center">
+        <br><br><br><br><h2>Mision</h2>
+    <p>
+        Brindar a los Pacientes y a sus Familiares servicios dignos con calidez y excelencia para otorgar los mejores <br>
+        tratamientos médicos hospitalarios, adquiriendo habilidades, destrezas y uso de nuevas tecnologías en la Práctica de la Medicina Veterinaria
+        <br> a los estudiantes de Licenciatura y Posgrado. 
+    </p>  
+   <br><br> </section>
+
+    <section align="center">
+        <h2>Vision</h2>
+    <p>
+        Ser un Hospital Veterinario reconocido por regirse con normas de bienestar animal y <br>
+        de excelencia profesional, donde estudiantes e investigadores generen conocimientos en la Práctica de la Medicina Veterinaria. <br>
+        Convertir al Hospital y a sus servicios diagnósticos y farmacéuticos como principal punto de referencia de la región.
+    </p>
+
+    <div align="center">
+    <br><br></section align="center">
+    <img src="imag/img5.jpg" alt="Lo siento" width="400" weight="400" >
+    <img src="imag/img3.jpg" alt="Lo siento" width="400" weight="400" >
+    </div>
   </section>
-
-  <div style="margin-top: 30px;">
-
-    <section class="TMOP_backgroundContainer" style="margin-bottom: 5%;">
-
-      <article class="TMOP_Container">
-        <div class="TMOP_detailsContainer">
-          <div class="onPla" style="padding-top: 5%;"> <h2>Adopciones en Pet's Vst</h2></div>
-          <p class="TMOP_p"> Hay muchas mascotas en busca de un hogar lleno de amor y diversión.<br> Acércate a tu
-            tienda Petco y
-            conoce las asociaciones civiles en donde puedes abrirle la puerta <br> de tu corazón al nuevo consentido de
-            la
-            familia.</p>
-          <h2> ¡Fomentemos la adopcion y no la compra de mascotas!</h2>
-        </div>
-      </article>
-    </section>
-    <center>
-      <div
-        style="margin: 4%;border: 2px; border-color: black; object-fit: cover; border-radius: 15px; width:auto; height: auto;">
-      </div>
-    </center>
-  </DIV>
-  <footer>
-    Melanie Santos Requenes 5-I
-  </footer>
 </body>
-
 </html>
